# Kicklock

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Oscilloscope_baseline.cpp  README.md  build_and_zip.ps1  build_release.bat  kicklock-agent-implementation-prompt.md  kicklock-implementation-prompt.md  run_tests.bat
.github/workflows/: build.yml  publish-macos-release.yml
cmake/: Pluginval.cmake
docs/: CI_VALIDATION.md  CONFLICT_FINGERPRINT_PERFORMANCE.md  CONFLICT_LOCALIZATION_PERFORMANCE.md  CONFLICT_STATE_PERFORMANCE.md  DYNAMIC_DESIGN_FREEZE.md  DYNAMIC_PRODUCER_GUIDE.md  PITCH_CLASSIFICATION_VALIDATION.md  QA_MATRIX.md  RELEASE_READINESS.md
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: AlignmentAnalyzer.h  AllpassPhaseRotator.h  AnalyzeState.h  AnalyzerInstruction.h  ConflictFingerprint.h  ConflictRegion.h  ConflictRegionLocalizer.h  ConflictStateClusterer.h  ConstrainedDtwRefiner.h  CorrelationMeter.h  DynamicAllpassPoleDomain.h  DynamicContinuityMixer.h  DynamicFingerprintExtractor.h  DynamicFingerprintMatcher.h  DynamicFingerprintTrigger.h  DynamicHighBandEQ.h  DynamicHotBranchEngine.h  DynamicLearnFingerprintExtraction.h  DynamicLearnFormation.h  DynamicManualTrimConversion.h  DynamicMapSourceResolver.h  DynamicMeasurementScorer.h  DynamicPackageMorpher.h  DynamicPredictedMeasurement.h  DynamicProductionRuntime.h  DynamicRecentUnknownEvents.h  DynamicRuntimeMeasurementCapture.h  DynamicRuntimeSelector.h  DynamicRuntimeSnapshot.h  DynamicSelectorScheduler.h  DynamicSelectorTypes.h  DynamicStateEditTransaction.h  DynamicStateMap.h  DynamicStateMeasurements.h  DynamicStateSerialization.h  DynamicTransientEQ.h  DynamicVerifiedAggregation.h  FftPlanCache.h  FixedTimingRotatorSearch.h  FractionalDelayLine.h  (+25 more)
src/ui/: CorrelationDisplay.h  DynamicFocusStatus.cpp  DynamicFocusStatus.h  DynamicRecentUnknownsPanel.cpp  DynamicRecentUnknownsPanel.h  DynamicStateEditThrottle.h  DynamicStateInspector.cpp  DynamicStateInspector.h  DynamicUiHelpers.h  DynamicWorkspace.cpp  DynamicWorkspace.h  DynamicWorkspaceHelpers.h  DynamicWorkspaceModel.h  LookAndFeel.h  Oscilloscope.cpp  Oscilloscope.h  ScopeVisuals.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  StatusHelpers.h  UiFormatters.h
src/util/: DynamicMeasurementResultQueue.h  DynamicSnapshotPublisher.h  DynamicStateMapUpdateQueue.h  HitCaptureBuffer.h  LearnHitQueue.h  NoteMapUpdateQueue.h  RawCaptureBuffer.h  ScopeFifo.h  SpectrumAnalysis.h  SpectrumFifo.h
tests/: AudioAcceptanceTests.cpp  AudioSmokeTests.cpp  AudioStressTests.cpp  CMakeLists.txt  ConflictLocalizationTests.cpp  ConflictStateTests.cpp  DspCoreTests.cpp  DspTestMain.cpp  DspTests.cpp  DynamicFingerprintTests.cpp  DynamicFocusAndRecentUnknownsTests.cpp  DynamicHotBranchEngineTests.cpp  DynamicLearnFormationTests.cpp  DynamicManualTrimConversionTests.cpp  DynamicManualWorkflowE2ETests.cpp  DynamicModeTests.cpp  DynamicNeutralSafeTests.cpp  DynamicPackageMorpherTests.cpp  DynamicPerformanceGateTests.cpp  DynamicProductionRuntimeTests.cpp  DynamicRecentUnknownEventsTests.cpp  DynamicReleaseFixture.cpp  DynamicReleaseFixture.h  DynamicReleaseGateTests.cpp  DynamicRuntimeTests.cpp  DynamicSelectorSchedulerTests.cpp  DynamicStateEditAuditionTests.cpp  DynamicStateEditPersistenceTests.cpp  DynamicStateEditProcessorTests.cpp  DynamicStateEditRevertTests.cpp  DynamicStateEditThrottleTests.cpp  DynamicStateEditTransactionTests.cpp  DynamicStateInspectorHelpersTests.cpp  DynamicStateMapTests.cpp  DynamicStateMeasurementTests.cpp  DynamicWorkspaceTests.cpp  FftFormatTest.cpp  LearnCoreTests.cpp  LearnDiagnosticRootCauseTests.cpp  LearnOrchestrationTests.cpp  (+15 more)
tests/assets/pitch_cc0/: README.md
tests/audio/: AudioFixtureGenerators.cpp  AudioFixtureGenerators.h  AudioFixtureManifest.h  AudioMetrics.h  AudioSuiteHelpers.h  AudioTestHarness.cpp  AudioTestHarness.h  AudioWavIo.h  TestPlayHead.h
